---------------------------------------------------------------------------------------------------
Version: 1.0.1
Info:
	- More code refactor for easy changes
	- Added vtk armor plating compatibility
	- Added 5 inventory slots to turret wagons
	- Turrets now recharge ammo from wagon
	- More rate of fire to rocket and cannon turrets

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Info:
	- Forked project
	- Added grid to locomotive and wagons
	- Added krastorio2 compatibility (grid equipment and fuel)
	- Refactored almost all code, so it is easy to modify stats or add more entities
	- Added minigun turret to physical attack damage bonus, same as base gun turret (dont know if works)
	- More range and damage modifier to turrets
	- More hp, weight and resistances to wagons and locomotive

---------------------------------------------------------------------------------------------------
Version: 0.4.6
Info:
	- Thumbnail fix

---------------------------------------------------------------------------------------------------
Version: 0.4.5
Info:
	- Changed sprite for radar (Limited Distribution Only Licence of original mod by Earendel)

---------------------------------------------------------------------------------------------------
Version: 0.4.4
Info:
	- Changelog fix!
	- Dependencies fix!
	- Title fix!

---------------------------------------------------------------------------------------------------
Version: 0.4.3
Info:
	- Update for 1.1 factorio (experimental)

---------------------------------------------------------------------------------------------------
Version: 0.4.2
Info:
	- Radar platform! (fuel powered)
	- Icons improved!
	- Recipes balanced!
	- Localization (RU, KO auto-translated)

---------------------------------------------------------------------------------------------------
Version: 0.4.1
Info:
	- Flamethrower turret!
	- Turret parameters balanced again
