@@ -1,5 +1,5 @@
 [entity-name]
-armored-locomotive-mk1=Armored locomotive
+armored-locomotive-mk1=Armored locomotive MK1
 
 minigun-wagon-mk1=Platform with minigun turret MK1
 minigun-turret-mk1=Minigun turret MK1
