@@ -1,12 +1,12 @@
 [technology-name]
-armored-train-turret-wagons=Armored Train
+armored-train-turret-wagons-MK1=Armored Train MK1
 
 
 
 [technology-description]
-armored-train-turret-wagons=
+armored-train-turret-wagons-MK1=
 
 
 
 [modifier-description]
-minigun-turret-mk1-attack-bonus =Minigun turret damage: +__1__
+minigun-turret-mk1-attack-bonus=Minigun turret damage: +__1__
