@@ -1,0 +1,37 @@
+[entity-name]
+armored-locomotive-mk1=Locomotora blindada MK1
+
+minigun-wagon-mk1=Plataforma con torreta minigun MK1
+minigun-turret-mk1=Torreta minigun MK1
+
+rocket-wagon-mk1=Plataforma con torreta lanzacohetes MK1
+rocket-turret-mk1=Torreta lanzacohetes MK1
+
+cannon-wagon-mk1=Vagon con torreta de cañon MK1
+cannon-turret-mk1=Torreta de cañon MK1
+
+flamethrower-wagon-mk1=Vagon con torreta lanzallamas MK1
+flamethrower-turret-mk1=Torreta lanzallamas MK1
+
+radar-wagon-mk1=Plataforma con radar MK1
+radar-turret-mk1=Radar MK1
+
+
+
+[entity-description]
+armored-locomotive-mk1=
+
+minigun-wagon-mk1=
+minigun-turret-mk1=
+
+rocket-wagon-mk1=
+rocket-turret-mk1=
+
+cannon-wagon-mk1=
+cannon-turret-mk1=
+
+flamethrower-wagon-mk1=
+flamethrower-turret-mk1=
+
+radar-wagon-mk1=
+radat-mk1=
