@@ -1,0 +1,12 @@
+[technology-name]
+armored-train-turret-wagons-MK1=Tren Blindado MK1
+
+
+
+[technology-description]
+armored-train-turret-wagons-MK1=
+
+
+
+[modifier-description]
+minigun-turret-mk1-attack-bonus=Daño de torreta minigun: +__1__
