@@ -1,10 +1,10 @@
 [technology-name]
-armored-train-turret-wagons=기갑 열차
+armored-train-turret-wagons-MK1=기갑 열차
 
 
 
 [technology-description]
-armored-train-turret-wagons=
+armored-train-turret-wagons-MK1=
 
 
 
