@@ -1,10 +1,10 @@
 [technology-name]
-armored-train-turret-wagons=Бронепоезд
+armored-train-turret-wagons-MK1=Бронепоезд
 
 
 
 [technology-description]
-armored-train-turret-wagons=
+armored-train-turret-wagons-MK1=
 
 
 
